2009-02-26 23:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Cleanup
	* PBMakefileGenerator.m: Add return files.
	* PBPbxNativeTarget.m: Fixes for static libraries.

2009-02-24 16:27-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Compile all static if one project is a static lib. 
	* PBMakefileGenerator.m: Final changes to support static libraries.
	* PBPbxNativeTarget.m: Removed unecessary autorelease/retain calls.

2009-02-24 02:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBPbxNativeTarget.h
	* PBPbxNativeTarget.m: Changes to support leapard style projects.

2009-02-23 21:19-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m
	* PBPbxNativeTarget.h
	* PBPbxNativeTarget.m: Changes to handle static libraries.

2009-01-02 Riccardo Mottola <rmottola@users.sf.net>

	* main.m
	* PBPbxNativeTarget.m, PBPbxProject.m, PBDevelopmentHelper.m, 
	PBMakefileGenerator.m: Removed c-99isms

2008-11-12 01:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Copy headers only from target directories.  

2008-11-10 19:14-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Copy all headers since many xcode projects
	don't include the headers in the project itself.  
	Also copy the resources.
	* PBMakefileGenerator.m: Minor cleanup

2008-11-02 21:45-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* cmdline.c
	* cmdline.h
	* main.m
	* optionsparser.ggo: Add option to use symbolic links instead
	of copying the files.

2008-10-26 21:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Copy only those files needed for each target instead
	of linking ALL of the files in each directory. 

2008-10-24 21:44-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Remove warning.
	* PBProjectGenerator.m: Fix issue adding nil to dictionary

2008-10-16 02:03-EDT Gregory John Casamento <greg_casamento@yahoo.com>
